<resources>
    <string name="app_name">Tuca Produtos de Limpeza</string>
    <string name="copyright">© João Vitor da Silva</string>
    <string name="developer">João Vitor da Silva</string>
    <string name="year">2020</string>
    <string name="version">0.2.0</string>
    <string name="company_name">Tuca Produtos de Limpeza</string>
    <string name="title_fragment_home">Página inicial</string>
    <string name="title_fragment_client_list">Clientes</string>
    <string name="title_fragment_client_add">Adicionar cliente</string>
    <string name="title_fragment_client_edit">Editar cliente</string>
    <string name="title_fragment_sale_list">Vendas</string>
    <string name="title_fragment_sale_add">Registrar venda</string>
    <string name="title_fragment_sale_info">Venda %1$s</string>
    <string name="title_fragment_sale_edit">Editar produtos</string>
    <string name="title_fragment_sale_select_client">Selecionar cliente</string>
    <string name="title_fragment_product_list">Produtos</string>
    <string name="title_fragment_product_add">Adicionar produto</string>
    <string name="title_fragment_product_edit">Editar produto</string>
    <string name="title_fragment_product_stock_movements">Histórico de estoque</string>
    <string name="title_fragment_reports">Relatórios</string>
    <string name="title_fragment_report_sales">Relatório de vendas</string>
    <string name="title_fragment_report_filtered_sales">Vendas filtradas</string>
    <string name="title_fragment_report_products_sold">Relátorio de produtos vendidos</string>
    <string name="title_fragment_report_products_sold_list">Produtos vendidos</string>
    <string name="title_fragment_settings">Configurações</string>
    <string name="title_fragment_manage_address">Gerenciar endereços</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuário</string>
    <string name="nav_header_subtitle">Email</string>
    <string name="nav_menu_home">Página inicial</string>
    <string name="nav_menu_sales">Vendas</string>
    <string name="nav_menu_clients">Clientes</string>
    <string name="nav_menu_products">Produtos</string>
    <string name="nav_menu_reports">Relatórios</string>
    <string name="nav_menu_settings">Configurações</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Senha</string>
    <string name="login_button_sign_in">Entrar</string>
    <string name="home_button_clients">Clientes</string>
    <string name="home_button_sales">Vendas</string>
    <string name="home_button_reports">Relatórios</string>
    <string name="home_button_products">Produtos</string>
    <string name="home_headline_general_info">Informações gerais</string>
    <string name="home_updated_at">Informações atualizadas em\u00A0</string>
    <string name="home_card_title_sales">Vendas</string>
    <string name="home_card_description_sales">Número total de vendas</string>
    <string name="home_card_title_clients">Clientes</string>
    <string name="home_card_description_clients">Número total de clientes</string>
    <string name="home_card_title_products">Produtos</string>
    <string name="home_card_description_products">Número total de produtos</string>
    <string name="home_fab_content_description">Ícone de adição</string>
    <string name="product_list_fab_content_description">Ícone de adição</string>
    <string name="product_add_hint_name">Nome</string>
    <string name="product_add_hint_price">Preço</string>
    <string name="product_add_hint_stock">Estoque</string>
    <string name="product_add_manage_stock">Gerenciar estoque</string>
    <string name="product_edit_tab_cadaster">Cadastro</string>
    <string name="product_edit_tab_stock">Estoque</string>
    <string name="product_edit_save_product">Salvar</string>
    <string name="product_edit_label_switch_stock">Gerenciar estoque</string>
    <string name="product_edit_button_recalculate_stock">Recalcular estoque</string>
    <string name="product_edit_button_stock_history">Histórico de movimentações</string>
    <string name="stock_history_sale">Venda %1$s</string>
    <string name="client_list_fab_icon_content_description">Ícone de pessoa</string>
    <string name="client_add_hint_name">Nome</string>
    <string name="client_add_hint_street">Rua</string>
    <string name="client_add_hint_complement">Complemento</string>
    <string name="client_add_hint_neighborhood">Bairro</string>
    <string name="client_add_hint_city">Cidade</string>
    <string name="client_add_hint_phone">Telefone</string>
    <string name="client_edit_hint_name">Nome</string>
    <string name="client_edit_hint_street">Rua</string>
    <string name="client_edit_hint_complement">Complemento</string>
    <string name="client_edit_hint_neighborhood">Bairro</string>
    <string name="client_edit_hint_city">Cidade</string>
    <string name="client_edit_hint_phone">Telefone</string>
    <string name="client_info_not_found_sales">Não há compras feitas</string>
    <string name="client_info_headline_sales">Compras feitas pelo cliente</string>
    <string name="client_info_label_city">Cidade</string>
    <string name="client_info_label_neighborhood">Bairro</string>
    <string name="client_info_label_complement">Complemento</string>
    <string name="client_info_label_street">Rua</string>
    <string name="client_info_label_phone">Telefone</string>
    <string name="sale_list_fab_content_description">Ícone de adição</string>
    <string name="sale_add_hint_products">Produtos</string>
    <string name="sale_add_hint_client">Cliente</string>
    <string name="sale_add_hint_discount">Desconto</string>
    <string name="sale_add_hint_paid_value">Valor pago</string>
    <string name="sale_add_hint_date">Data</string>
    <string name="sale_add_button_add_product">Adicionar</string>
    <string name="sale_add_payment">Pagamento</string>
    <string name="sale_add_radio_unpaid">Não pago</string>
    <string name="sale_add_radio_paid">Pago</string>
    <string name="sale_add_radio_partially_paid">Parcialmente pago</string>
    <string name="sale_add_check_box_print">Imprimir recibo</string>
    <string name="sale_add_date_helper_text">Data em que foi realizada a venda</string>
    <string name="sale_add_discount_helper_text">Valor descontado do valor total</string>
    <string name="sale_add_label_total">Total:</string>
    <string name="sale_info_headline_products">Produtos</string>
    <string name="sale_info_headline_payment">Pagamento</string>
    <string name="sale_info_label_data">Data da Venda</string>
    <string name="sale_info_label_situation">Situação</string>
    <string name="sale_info_label_client">Cliente</string>
    <string name="sale_info_label_seller">Vendedor</string>
    <string name="sale_info_label_gross_value">Valor Bruto</string>
    <string name="sale_info_label_discount">Desconto</string>
    <string name="sale_info_label_net_value">Valor líquido</string>
    <string name="sale_info_label_receivable">Valor a receber</string>
    <string name="sale_info_label_paid_value">Valor pago</string>
    <string name="sale_info_label_payment_day">Data do pagamento</string>
    <string name="sale_edit_products_label_total">Total:</string>
    <string name="fragment_reports_button_products_sold">Relatório de produtos vendidos</string>
    <string name="fragment_reports_button_sales">Relatório de vendas</string>
    <string name="report_sales_headline_situation">Situação de pagamento</string>
    <string name="report_sales_headline_period">Intervalo de tempo</string>
    <string name="report_sales_headline_address">Endereço</string>
    <string name="report_sales_label_end_date">Data final</string>
    <string name="report_sales_label_start_date">Data inicial</string>
    <string name="report_sales_radio_button_street">Rua</string>
    <string name="report_sales_radio_button_neighborhood">Bairro</string>
    <string name="report_sales_radio_button_city">Cidade</string>
    <string name="report_sales_radio_button_no_filter">Sem filtro</string>
    <string name="report_sales_filter_button">Filtrar</string>
    <string name="report_sales_radio_all">Todos</string>
    <string name="report_sales_radio_paid">Pago</string>
    <string name="report_sales_radio_unpaid">Não pago</string>
    <string name="report_products_sold_headline_period">Periodo de tempo</string>
    <string name="report_products_sold_label_start_date">Data inicio</string>
    <string name="report_products_sold_label_end_date">Data final</string>
    <string name="fragment_report_seller_date_hint">Selecione a data</string>
    <string name="title_fragment_report_seller">Relatório por vendedor</string>
    <string name="fragment_report_button_seller">Relatório por vendedor</string>
    <string name="report_seller_headline_seller">Vendedor</string>
    <string name="fragment_manage_address_label_streets">Ruas</string>
    <string name="fragment_manage_address_label_neighborhoods">Bairros</string>
    <string name="fragment_manage_address_label_cities">Cidades</string>
    <string name="settings_general_header">Geral</string>
    <string name="settings_appearance_header">Aparência</string>
    <string name="settings_manage_address_title">Gerenciar endereços</string>
    <string name="settings_help_header">Ajuda</string>
    <string name="settings_about_title">Sobre</string>
    <string name="settings_night_mode_title">Ativar modo escuro</string>
    <string name="menu_item_search_title">Pesquisar</string>
    <string name="menu_item_filter_title">Filtrar</string>
    <string name="menu_item_refresh_list_title">Atualizar lista</string>
    <string name="menu_item_save_title">Salvar</string>
    <string name="menu_item_print_title">Imprimir</string>
    <string name="menu_item_check_paid_title">Registrar pagamento</string>
    <string name="menu_item_add_product_title">Adicionar produto</string>
    <string name="menu_item_edit_products_title">Adicionar produtos</string>
    <string name="menu_item_delete_sale_title">Excluir venda</string>
    <string name="menu_item_delete_product_title">Excluir produto</string>
    <string name="menu_item_delete_client_title">Excluir cliente</string>
    <string name="menu_item_print_report_title">Imprimir relatório</string>
    <string name="menu_item_add_address_title">Adicionar endereço</string>
    <string name="menu_item_edit_client_title">Editar cliente</string>
    <string name="menu_item_call_client_title">Ligar para o cliente</string>
    <string name="dialog_print_sales_text">Foram encontradas %1$s vendas com os filtros selecionados</string>
    <string name="dialog_print_sales_title">Imprimir relatório?</string>
    <string name="dialog_print_sales_print_button">Imprimir</string>
    <string name="dialog_print_sales_visualize_button">Visualizar</string>
    <string name="dialog_delete_client_title">Excluir cliente?</string>
    <string name="dialog_delete_client_message">Esta ação irá excluir permanentemente o cliente</string>
    <string name="dialog_delete_client_negative_button">Cancelar</string>
    <string name="dialog_delete_client_positive_button">Excluir</string>
    <string name="dialog_delete_product_title">Excluir Produto?</string>
    <string name="dialog_delete_product_message">Esta ação irá excluir permanentemente o produto e o seu histórico de estoque</string>
    <string name="dialog_delete_product_negative_button">Cancelar</string>
    <string name="dialog_delete_product_positive_button">Excluir</string>
    <string name="dialog_activate_bluetooth_title">Ativar bluetooth?</string>
    <string name="dialog_activate_bluetooth_message">A opção de imprimir recibo está selecionada mas o bluetooth está desativado</string>
    <string name="dialog_activate_bluetooth_negative_button">Não</string>
    <string name="dialog_about_label_made_by">Desenvolvido por</string>
</resources>