<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home_fragment"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/nav_menu_home" />
        <item
            android:id="@+id/sale_list_fragment"
            android:icon="@drawable/ic_menu_sales"
            android:title="@string/nav_menu_sales" />
        <item
            android:id="@+id/client_list_fragment"
            android:icon="@drawable/ic_menu_client"
            android:title="@string/nav_menu_clients" />
        <item
            android:id="@+id/product_list_fragment"
            android:icon="@drawable/ic_menu_product"
            android:title="@string/nav_menu_products" />

        <item
            android:id="@+id/reports_fragment"
            android:icon="@drawable/ic_menu_reports"
            android:title="@string/nav_menu_reports" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settings_fragment"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/nav_menu_settings" />
    </group>
</menu>