<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/add_products"
        app:showAsAction="never"
        android:title="@string/menu_item_add_products_title" />

    <item
        android:id="@+id/action_delete_sale"
        app:showAsAction="never"
        android:title="@string/menu_item_delete_sale_title" />

    <item
        android:id="@+id/print_receipt"
        android:icon="@drawable/ic_print_white"
        app:showAsAction="always"
        android:title="@string/menu_item_print_title" />

    <item
        android:id="@+id/action_register_payment"
        android:icon="@drawable/ic_check_white"
        app:showAsAction="ifRoom"
        android:title="@string/menu_item_check_paid_title" />
</menu>