<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        tools:context=".ui.reports.sales.ReportSalesFragment">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_sales_headline_situation"
                style="@style/Headline6"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:layout_marginTop="6dp"
                android:checked="true"
                android:text="Todos" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_button_paid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:text="Pago" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_button_unpaid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:text="Não pago" />
        </RadioGroup>

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="2dp"
            android:background="@color/colorDivider"
            android:src="?android:attr/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group"
            tools:layout_editor_absoluteY="91dp" />

        <TextView
            android:id="@+id/headline_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/report_sales_headline_period"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            style="@style/Headline6"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:text="@string/report_sales_label_start_date"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_input_calendar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headline_period" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="6"
            android:focusable="false"
            android:inputType="date"
            android:text="20/08/2020"
            android:backgroundTint="#CECECECE"
            android:textAlignment="center"
            android:textColor="#CECECECE"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_start_date" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:drawablePadding="6dp"
            android:text="@string/report_sales_label_end_date"
            app:drawableStartCompat="@drawable/ic_input_calendar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_date" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="6"
            android:focusable="false"
            android:inputType="date"
            android:text="20/08/2020"
            android:backgroundTint="#CECECECE"
            android:textAlignment="center"
            android:textColor="#CECECECE"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_end_date" />


        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="2dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorDivider"
            android:src="?android:attr/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/end_date" />


        <RadioGroup
            android:id="@+id/radio_group_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            app:layout_constraintTop_toBottomOf="@+id/divider2" >

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/report_sales_headline_address"
                style="@style/Headline6"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_marginTop="6dp"
                android:paddingHorizontal="12dp"
                android:text="@string/report_sales_radio_button_no_filter" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_button_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:text="@string/report_sales_radio_button_street" />


            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_button_neighborhood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:text="@string/report_sales_radio_button_neighborhood" />

            <RadioButton
                android:id="@+id/radio_button_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:text="@string/report_sales_radio_button_city" />


        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/filter_sales"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="32dp"
            android:text="@string/report_sales_filter_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group_address" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

</layout>


