<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        tools:context=".ui.reports.productsSold.ReportProductsSoldFragment">

        <TextView
            android:id="@+id/headline_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_products_sold_headline_period"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Headline6"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:text="@string/report_products_sold_label_start_date"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_input_calendar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headline_period" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="6"
            android:focusable="false"
            android:inputType="date"
            android:text="20/08/2020"
            android:backgroundTint="#CECECECE"
            android:textAlignment="center"
            android:textColor="#CECECE"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_start_date" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:drawablePadding="6dp"
            android:text="@string/report_products_sold_label_end_date"
            app:drawableStartCompat="@drawable/ic_input_calendar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_date" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="6"
            android:focusable="false"
            android:inputType="date"
            android:text="20/08/2020"
            android:backgroundTint="#CECECECE"
            android:textAlignment="center"
            android:textColor="#CECECE"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_end_date" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/generate"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:text="@string/report_sales_filter_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/end_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>